--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["Darren Ldl <darrenldldev@gmail.com>"]
 reed-solomon-erasure = { path = "reed-solomon-erasure" }
 rand = "0.4"
 time = "0.1"
+
+[profile.release]
+debug=true
