Updated RS lib code

--- a/reed-solomon-erasure/Cargo.toml
+++ b/reed-solomon-erasure/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reed-solomon-erasure"
-version = "2.0.0"
+version = "2.1.0-beta"
 authors = ["Darren Ldl <darrenldldev@gmail.com>"]
 build   = "build.rs"
 exclude = [
@@ -23,6 +23,9 @@ categories = ["encoding"]
 
 license = "MIT"
 
+[features]
+pure-rust = []
+
 [badges]
 travis-ci = { repository = "darrenldl/reed-solomon-erasure" }
 codecov   = { repository = "darrenldl/reed-solomon-erasure" }
@@ -31,6 +34,10 @@ coveralls = { repository = "darrenldl/reed-solomon-erasure" }
 [dependencies]
 rayon = "0.9"
 smallvec = "0.6"
+libc = "0.2"
 
 [dev-dependencies]
 rand  = "0.4"
+
+[build-dependencies]
+cc = "1.0"
