--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Darren Ldl <darrenldldev@gmail.com>"]
 
 [dependencies]
-reed-solomon-erasure = { path = "reed-solomon-erasure" }
+reed-solomon-erasure = { path = "reed-solomon-erasure", features = [ "simd-accel" ] }
 rand = "0.4"
 time = "0.1"
